@@ -106,7 +106,7 @@ public class PinInPostActivatedTest {
 
         assertTrue(expectedSubscriptions.isPresent());
         assertEquals(1, expectedSubscriptions.get().size());
-        assertEquals(USER_ID, expectedSubscriptions.get().get(0).getId());
+        assertEquals(USER_ID, expectedSubscriptions.get().getFirst().getId());
 
         Subscriber expectedSubscriber = new Subscriber(
             SubscriberType.APPELLANT,
@@ -114,7 +114,7 @@ public class PinInPostActivatedTest {
             YesOrNo.YES,
             APPELLANT_MOBILE_NUMBER,
             YesOrNo.NO);
-        assertThat(expectedSubscriptions.get().get(0).getValue()).usingRecursiveComparison().isEqualTo(expectedSubscriber);
+        assertThat(expectedSubscriptions.get().getFirst().getValue()).usingRecursiveComparison().isEqualTo(expectedSubscriber);
     }
 
     @Test
@@ -135,7 +135,7 @@ public class PinInPostActivatedTest {
 
         assertTrue(expectedSubscriptions.isPresent());
         assertEquals(1, expectedSubscriptions.get().size());
-        assertEquals(USER_ID, expectedSubscriptions.get().get(0).getId());
+        assertEquals(USER_ID, expectedSubscriptions.get().getFirst().getId());
 
         Subscriber expectedSubscriber = new Subscriber(
             SubscriberType.APPELLANT,
@@ -143,7 +143,7 @@ public class PinInPostActivatedTest {
             YesOrNo.NO,
             APPELLANT_MOBILE_NUMBER,
             YesOrNo.YES);
-        assertThat(expectedSubscriptions.get().get(0).getValue()).usingRecursiveComparison().isEqualTo(expectedSubscriber);
+        assertThat(expectedSubscriptions.get().getFirst().getValue()).usingRecursiveComparison().isEqualTo(expectedSubscriber);
     }
 
     @Test
@@ -172,7 +172,7 @@ public class PinInPostActivatedTest {
 
         assertTrue(expectedSubscriptions.isPresent());
         assertEquals(1, expectedSubscriptions.get().size());
-        assertEquals(USER_ID, expectedSubscriptions.get().get(0).getId());
+        assertEquals(USER_ID, expectedSubscriptions.get().getFirst().getId());
 
         Subscriber expectedSubscriber = new Subscriber(
             SubscriberType.APPELLANT,
@@ -180,7 +180,7 @@ public class PinInPostActivatedTest {
             YesOrNo.YES,
             APPELLANT_MOBILE_NUMBER,
             YesOrNo.NO);
-        assertThat(expectedSubscriptions.get().get(0).getValue()).usingRecursiveComparison().isEqualTo(expectedSubscriber);
+        assertThat(expectedSubscriptions.get().getFirst().getValue()).usingRecursiveComparison().isEqualTo(expectedSubscriber);
     }
 
     @Test
