@@ -204,7 +204,7 @@ class RequestHearingRequirementsDirectionTest {
         List<IdValue<Direction>> actualExistingDirections =
             existingDirectionsCaptor
                 .getAllValues()
-                .get(0);
+                .getFirst();
 
         assertEquals(0, actualExistingDirections.size());
 
