@@ -87,13 +87,13 @@ class DirectionAppenderTest {
         assertNotNull(allDirections);
         assertEquals(3, allDirections.size());
 
-        assertEquals("3", allDirections.get(0).getId());
-        assertEquals(newDirectionExplanation, allDirections.get(0).getValue().getExplanation());
-        assertEquals(newDirectionParties, allDirections.get(0).getValue().getParties());
-        assertEquals(newDirectionDateDue, allDirections.get(0).getValue().getDateDue());
-        assertEquals(expectedDateSent, allDirections.get(0).getValue().getDateSent());
-        assertEquals(expectedDateSent, allDirections.get(0).getValue().getDateSent());
-        assertEquals(expectedTag, allDirections.get(0).getValue().getTag());
+        assertEquals("3", allDirections.getFirst().getId());
+        assertEquals(newDirectionExplanation, allDirections.getFirst().getValue().getExplanation());
+        assertEquals(newDirectionParties, allDirections.getFirst().getValue().getParties());
+        assertEquals(newDirectionDateDue, allDirections.getFirst().getValue().getDateDue());
+        assertEquals(expectedDateSent, allDirections.getFirst().getValue().getDateSent());
+        assertEquals(expectedDateSent, allDirections.getFirst().getValue().getDateSent());
+        assertEquals(expectedTag, allDirections.getFirst().getValue().getTag());
 
         assertEquals("2", allDirections.get(1).getId());
         assertEquals(existingDirection1, allDirections.get(1).getValue());
@@ -124,12 +124,12 @@ class DirectionAppenderTest {
         assertNotNull(allDirections);
         assertEquals(1, allDirections.size());
 
-        assertEquals("1", allDirections.get(0).getId());
-        assertEquals(newDirectionExplanation, allDirections.get(0).getValue().getExplanation());
-        assertEquals(newDirectionParties, allDirections.get(0).getValue().getParties());
-        assertEquals(newDirectionDateDue, allDirections.get(0).getValue().getDateDue());
-        assertEquals(expectedDateSent, allDirections.get(0).getValue().getDateSent());
-        assertEquals(expectedTag, allDirections.get(0).getValue().getTag());
+        assertEquals("1", allDirections.getFirst().getId());
+        assertEquals(newDirectionExplanation, allDirections.getFirst().getValue().getExplanation());
+        assertEquals(newDirectionParties, allDirections.getFirst().getValue().getParties());
+        assertEquals(newDirectionDateDue, allDirections.getFirst().getValue().getDateDue());
+        assertEquals(expectedDateSent, allDirections.getFirst().getValue().getDateSent());
+        assertEquals(expectedTag, allDirections.getFirst().getValue().getTag());
         verify(waFieldsPublisher).addLastModifiedDirection(eq(asylumCase), anyString(), any(Parties.class), anyString(), any(DirectionTag.class), anyString(), eq(null));
     }
 
@@ -233,17 +233,17 @@ class DirectionAppenderTest {
         assertNotNull(allDirections);
         assertEquals(3, allDirections.size());
 
-        assertEquals("3", allDirections.get(0).getId());
-        assertEquals(newDirectionExplanation, allDirections.get(0).getValue().getExplanation());
-        assertEquals(newDirectionParties, allDirections.get(0).getValue().getParties());
-        assertEquals(newDirectionDateDue, allDirections.get(0).getValue().getDateDue());
-        assertEquals(expectedDateSent, allDirections.get(0).getValue().getDateSent());
-        assertEquals(expectedDateSent, allDirections.get(0).getValue().getDateSent());
-        assertEquals(expectedTag, allDirections.get(0).getValue().getTag());
-        assertEquals(emptyList(), allDirections.get(0).getValue().getClarifyingQuestions());
-        assertNotNull(allDirections.get(0).getValue().getUniqueId());
-        assertThat(UUID.fromString(allDirections.get(0).getValue().getUniqueId())).isExactlyInstanceOf(UUID.class);
-        assertEquals(directionType, allDirections.get(0).getValue().getDirectionType());
+        assertEquals("3", allDirections.getFirst().getId());
+        assertEquals(newDirectionExplanation, allDirections.getFirst().getValue().getExplanation());
+        assertEquals(newDirectionParties, allDirections.getFirst().getValue().getParties());
+        assertEquals(newDirectionDateDue, allDirections.getFirst().getValue().getDateDue());
+        assertEquals(expectedDateSent, allDirections.getFirst().getValue().getDateSent());
+        assertEquals(expectedDateSent, allDirections.getFirst().getValue().getDateSent());
+        assertEquals(expectedTag, allDirections.getFirst().getValue().getTag());
+        assertEquals(emptyList(), allDirections.getFirst().getValue().getClarifyingQuestions());
+        assertNotNull(allDirections.getFirst().getValue().getUniqueId());
+        assertThat(UUID.fromString(allDirections.getFirst().getValue().getUniqueId())).isExactlyInstanceOf(UUID.class);
+        assertEquals(directionType, allDirections.getFirst().getValue().getDirectionType());
 
         assertEquals("2", allDirections.get(1).getId());
         assertEquals(existingDirection1, allDirections.get(1).getValue());
@@ -287,17 +287,17 @@ class DirectionAppenderTest {
         assertNotNull(allDirections);
         assertEquals(3, allDirections.size());
 
-        assertEquals("3", allDirections.get(0).getId());
-        assertEquals(newDirectionExplanation, allDirections.get(0).getValue().getExplanation());
-        assertEquals(newDirectionParties, allDirections.get(0).getValue().getParties());
-        assertEquals(newDirectionDateDue, allDirections.get(0).getValue().getDateDue());
-        assertEquals(expectedDateSent, allDirections.get(0).getValue().getDateSent());
-        assertEquals(expectedDateSent, allDirections.get(0).getValue().getDateSent());
-        assertEquals(expectedTag, allDirections.get(0).getValue().getTag());
-        assertEquals(newQuestions, allDirections.get(0).getValue().getClarifyingQuestions());
-        assertNotNull(allDirections.get(0).getValue().getUniqueId());
-        assertThat(UUID.fromString(allDirections.get(0).getValue().getUniqueId())).isExactlyInstanceOf(UUID.class);
-        assertEquals(directionType, allDirections.get(0).getValue().getDirectionType());
+        assertEquals("3", allDirections.getFirst().getId());
+        assertEquals(newDirectionExplanation, allDirections.getFirst().getValue().getExplanation());
+        assertEquals(newDirectionParties, allDirections.getFirst().getValue().getParties());
+        assertEquals(newDirectionDateDue, allDirections.getFirst().getValue().getDateDue());
+        assertEquals(expectedDateSent, allDirections.getFirst().getValue().getDateSent());
+        assertEquals(expectedDateSent, allDirections.getFirst().getValue().getDateSent());
+        assertEquals(expectedTag, allDirections.getFirst().getValue().getTag());
+        assertEquals(newQuestions, allDirections.getFirst().getValue().getClarifyingQuestions());
+        assertNotNull(allDirections.getFirst().getValue().getUniqueId());
+        assertThat(UUID.fromString(allDirections.getFirst().getValue().getUniqueId())).isExactlyInstanceOf(UUID.class);
+        assertEquals(directionType, allDirections.getFirst().getValue().getDirectionType());
 
         assertEquals("2", allDirections.get(1).getId());
         assertEquals(existingDirection1, allDirections.get(1).getValue());
