@@ -54,9 +54,9 @@ class HearingDecisionProcessorTest {
         verify(asylumCase).write(eq(HEARING_DECISION_LIST), newHearingDecisionListArgumentCaptor.capture());
         List<IdValue<HearingDecision>> hearingDecisionList = newHearingDecisionListArgumentCaptor.getValue();
         assertEquals(1, hearingDecisionList.size());
-        assertEquals("1", hearingDecisionList.get(0).getId());
-        assertEquals("12345", hearingDecisionList.get(0).getValue().getHearingId());
-        assertEquals("allowed", hearingDecisionList.get(0).getValue().getDecision());
+        assertEquals("1", hearingDecisionList.getFirst().getId());
+        assertEquals("12345", hearingDecisionList.getFirst().getValue().getHearingId());
+        assertEquals("allowed", hearingDecisionList.getFirst().getValue().getDecision());
     }
 
     @Test
@@ -80,9 +80,9 @@ class HearingDecisionProcessorTest {
         verify(asylumCase).write(eq(HEARING_DECISION_LIST), newHearingDecisionListArgumentCaptor.capture());
         List<IdValue<HearingDecision>> hearingDecisionList = newHearingDecisionListArgumentCaptor.getValue();
         assertEquals(3, hearingDecisionList.size());
-        assertEquals("1", hearingDecisionList.get(0).getId());
-        assertEquals("23456", hearingDecisionList.get(0).getValue().getHearingId());
-        assertEquals("dismissed", hearingDecisionList.get(0).getValue().getDecision());
+        assertEquals("1", hearingDecisionList.getFirst().getId());
+        assertEquals("23456", hearingDecisionList.getFirst().getValue().getHearingId());
+        assertEquals("dismissed", hearingDecisionList.getFirst().getValue().getDecision());
         assertEquals("2", hearingDecisionList.get(1).getId());
         assertEquals("34567", hearingDecisionList.get(1).getValue().getHearingId());
         assertEquals("dismissed", hearingDecisionList.get(1).getValue().getDecision());
@@ -112,9 +112,9 @@ class HearingDecisionProcessorTest {
         verify(asylumCase).write(eq(HEARING_DECISION_LIST), newHearingDecisionListArgumentCaptor.capture());
         List<IdValue<HearingDecision>> hearingDecisionList = newHearingDecisionListArgumentCaptor.getValue();
         assertEquals(2, hearingDecisionList.size());
-        assertEquals("1", hearingDecisionList.get(0).getId());
-        assertEquals("12345", hearingDecisionList.get(0).getValue().getHearingId());
-        assertEquals("allowed", hearingDecisionList.get(0).getValue().getDecision());
+        assertEquals("1", hearingDecisionList.getFirst().getId());
+        assertEquals("12345", hearingDecisionList.getFirst().getValue().getHearingId());
+        assertEquals("allowed", hearingDecisionList.getFirst().getValue().getDecision());
         assertEquals("2", hearingDecisionList.get(1).getId());
         assertEquals("34567", hearingDecisionList.get(1).getValue().getHearingId());
         assertEquals("dismissed", hearingDecisionList.get(1).getValue().getDecision());
@@ -134,9 +134,9 @@ class HearingDecisionProcessorTest {
         verify(asylumCase).write(eq(HEARING_DECISION_LIST), newHearingDecisionListArgumentCaptor.capture());
         List<IdValue<HearingDecision>> hearingDecisionList = newHearingDecisionListArgumentCaptor.getValue();
         assertEquals(1, hearingDecisionList.size());
-        assertEquals("1", hearingDecisionList.get(0).getId());
-        assertEquals("12345", hearingDecisionList.get(0).getValue().getHearingId());
-        assertEquals("decided", hearingDecisionList.get(0).getValue().getDecision());
+        assertEquals("1", hearingDecisionList.getFirst().getId());
+        assertEquals("12345", hearingDecisionList.getFirst().getValue().getHearingId());
+        assertEquals("decided", hearingDecisionList.getFirst().getValue().getDecision());
     }
 
     @Test
