@@ -106,7 +106,7 @@ class DbAppealReferenceNumberGeneratorTest {
         MapSqlParameterSource actualInsertParameters =
             insertParametersCaptor
                 .getAllValues()
-                .get(0);
+                .getFirst();
 
         assertEquals(caseId, actualInsertParameters.getValue("caseId"));
         assertEquals(appealType.name(), actualInsertParameters.getValue("appealType"));
@@ -116,7 +116,7 @@ class DbAppealReferenceNumberGeneratorTest {
         MapSqlParameterSource actualSelectParameters =
             selectParametersCaptor
                 .getAllValues()
-                .get(0);
+                .getFirst();
 
         assertEquals(caseId, actualSelectParameters.getValue("caseId"));
     }
