@@ -54,7 +54,7 @@ public class ErrorResponseLoggerTest {
 
         List<ILoggingEvent> logEvents = this.listAppender.list;
         assertEquals(1, logEvents.size());
-        assertThat(logEvents.get(0).getFormattedMessage())
+        assertThat(logEvents.getFirst().getFormattedMessage())
                 .startsWith("Error returned with status: "
                         + HttpStatus.BAD_GATEWAY.value()
                         + ". \nWith response body: "
@@ -77,7 +77,7 @@ public class ErrorResponseLoggerTest {
         List<ILoggingEvent> logEvents = this.listAppender.list;
         assertEquals(1, logEvents.size());
 
-        assertThat(logEvents.get(0).getFormattedMessage())
+        assertThat(logEvents.getFirst().getFormattedMessage())
                 .startsWith("Error returned with status: "
                         + HttpStatus.INTERNAL_SERVER_ERROR.value()
                         + ". \nWith response body: ");
